Fixed Favicon not showing and added some PartyUp colors

--- a/modules/core/client/css/party-up-style.css
+++ b/modules/core/client/css/party-up-style.css
@@ -1,5 +1,11 @@
+body {
+	background: #2B2B2B;
+	color: #FFFEFF;
+}
+
 .btn.PUButton {
 	color: white;
 	background-color: #8DC63F;
 	font-weight: bold;
 }
+
